[FIX] gap  card__pay-button #3

--- a/style.css
+++ b/style.css
@@ -1499,7 +1499,7 @@ body:not(.contact-page) {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
     margin: 28px auto;
     width: 100%;
 }
